[tool.poetry]
name = "kratos"
version = "0.1.0"
description = "Visa Offers Platform API Proxy for Service Team"
authors = ["Chris Pressland <mail@cpressland.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
falcon = "^3.1.0"
requests = "^2.28.1"
azure-keyvault-secrets = "^4.4.0"
azure-identity = "^1.10.0"
pydantic = "^1.9.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
Flake8-pyproject = "^1.0.1"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
